<resources>
    <string name="app_name">ScoutingApp</string>
    <string name="save_button_text">Save</string>
    <string name="unable_to_write_file">Save</string>
    <string name="data_written">Data successfully written to </string>

    <!--Action bar menu items-->
    <string name="action_settings">Settings</string>
    <string name="action_teleop">TeleOp</string>
    <string name="action_main_screen">Main</string>
    <string name="action_pit">Pit</string>
    <string name="action_fieldmap">Field Map</string>

    <!-- Shooting screen values -->
    <string name="label_shooting">Shooting</string>
    <string name="high_goal_accuracy">High goal accuracy</string>
    <string name="high_goal_speed">High goal speed</string>
    <string name="low_goal_accuracy">Low goal accuracy</string>
    <string name="low_goal_speed">Low goal speed</string>

    <!-- Climbing screen values -->
    <string name="label_climbing">Climbing</string>

    <!--Values used on multiple screens -->
    <string name="label_attempted">Attempted</string>
    <string name="label_succeeded">Succeeded</string>

    <!--
   Copyright 2013 Csaba Szugyiczki

   Licensed under the Apache License, Version 2.0 (the "License");
   you may not use this file except in compliance with the License.
   You may obtain a copy of the License at

       http://www.apache.org/licenses/LICENSE-2.0

   Unless required by applicable law or agreed to in writing, software
   distributed under the License is distributed on an "AS IS" BASIS,
   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
   See the License for the specific language governing permissions and
   limitations under the License.
   -->

    <!-- Menu names -->
    <string name="business_card">Business Card</string>
    <string name="calendar">Calendar</string>
    <string name="cloud">Cloud</string>
    <string name="facebook">Facebook</string>
    <string name="key">Key</string>
    <string name="mail">Mail</string>
    <string name="profile">Profile</string>
    <string name="tag">Tag</string>
    <string name="voice_search">Voice Search</string>
    <!-- Buttons -->
    <string name="button_add">Add child</string>
    <string name="button_remove">Remove child</string>
    <!-- Menu items -->
    <string name="speed">speed</string>
    <string name="radius">radius</string>
    <string name="is_rotating">isRotating</string>
    <string name="first_child_position">firstChildPosition</string>
    <!-- Dialog -->
    <string name="dialog_speed">Set speed attribute</string>
    <string name="dialog_speed_value">speed: %d</string>
    <string name="dialog_radius">Set radius attribute</string>
    <string name="dialog_radius_value">radius: %ddp</string>
    <string name="dialog_is_rotating">Set isRotating attribute</string>
    <string name="dialog_first_child_position">Set the firstChildPosition attribute</string>
    <!-- Toasts -->
    <string name="start_app">Starting application: %s</string>
    <string name="center_click">Center has been clicked</string>
</resources>
