<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="org.usfirst.frc.team4911.scouting.matchscouting.recordgameeventfragments.ClimbingFragment">

    <CheckBox
        android:id="@+id/chkClimbingAttempted"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_attempted" />

    <CheckBox
        android:id="@+id/chkClimbingSucceeded"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_succeeded" />

    <Button
        android:id="@+id/buttonReturnToGame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save_button_text" />

</LinearLayout>
