<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="org.usfirst.frc.team4911.scouting.matchscouting.recordgameeventactivity.ShootingFragment">

    <TextView
        android:id="@+id/ShootingLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:gravity="start"
        android:text="@string/label_shooting"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/HighGoalAccuracyLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:gravity="start"
        android:text="@string/high_goal_accuracy"
        android:textSize="25sp" />

    <SeekBar
        style="@style/Widget.AppCompat.SeekBar.Discrete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:max="3"
        android:progress="0"
        android:id="@+id/seekBarHighAccuracy" />

    <TextView
        android:id="@+id/HighGoalSpeedLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:gravity="start"
        android:text="@string/high_goal_speed"
        android:textSize="25sp" />

    <SeekBar
        style="@style/Widget.AppCompat.SeekBar.Discrete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:max="3"
        android:progress="0"
        android:id="@+id/seekBarHighSpeed" />

    <TextView
        android:id="@+id/LowGoalAccuracyLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:gravity="start"
        android:text="@string/low_goal_accuracy"
        android:textSize="25sp" />

    <SeekBar
        style="@style/Widget.AppCompat.SeekBar.Discrete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:max="3"
        android:progress="0"
        android:id="@+id/seekBarLowAccuracy" />

    <TextView
        android:id="@+id/LowGoalSpeedLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:gravity="start"
        android:text="@string/low_goal_speed"
        android:textSize="25sp" />

    <SeekBar
        style="@style/Widget.AppCompat.SeekBar.Discrete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:max="3"
        android:progress="0"
        android:id="@+id/seekBarLowSpeed" />

</LinearLayout>
