<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/HighGoalAccuracyLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:gravity="start"
        android:text="@string/high_goal_accuracy"
        android:textSize="25sp" />

    <SeekBar
        style="@style/Widget.AppCompat.SeekBar.Discrete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:max="3"
        android:progress="0"
        android:id="@+id/seekBarHighAccuracy" />

    <TextView
        android:id="@+id/HighGoalSpeedLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:gravity="start"
        android:text="@string/high_goal_speed"
        android:textSize="25sp" />

    <SeekBar
        style="@style/Widget.AppCompat.SeekBar.Discrete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:max="3"
        android:progress="0"
        android:id="@+id/seekBarHighSpeed" />

    <TextView
        android:id="@+id/LowGoalAccuracyLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:gravity="start"
        android:text="@string/low_goal_accuracy"
        android:textSize="25sp" />

    <SeekBar
        style="@style/Widget.AppCompat.SeekBar.Discrete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:max="3"
        android:progress="0"
        android:id="@+id/seekBarLowAccuracy" />

    <TextView
        android:id="@+id/LowGoalSpeedLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:gravity="start"
        android:text="@string/low_goal_speed"
        android:textSize="25sp" />

    <SeekBar
        style="@style/Widget.AppCompat.SeekBar.Discrete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:max="3"
        android:progress="0"
        android:id="@+id/seekBarLowSpeed" />
</LinearLayout>
